ganache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blckch-service
spec:
  type: NodePort
  selector:
    app: blckch
  ports:
    - protocol: TCP
      port: 8545
      targetPort: 8545
      nodePort: 30000
