ganache-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blckch-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: my-blckch.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blckch-service
            port:
              number: 8545
